--- a/lime-plaster.html
+++ b/lime-plaster.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lime Plaster | Surface Art Singapore</title>
+    <title>Lime Plaster | Surface Projects Singapore</title>
     <meta name="description"
         content="Hand-applied mineral plaster for feature walls. Available in 3 patterns: Smooth Trowel, Natural Movement, and Stone Texture.">
 
@@ -27,7 +27,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container nav-wrapper">
-            <a href="index.html" class="brand-logo">Surface Art.</a>
+            <a href="index.html" class="brand-logo">Surface Projects.</a>
 
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -159,10 +159,10 @@
     <!-- Footer -->
     <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
         <div class="container text-center">
-            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Art.</h3>
+            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Projects.</h3>
             <p style="opacity: 0.7; margin-bottom: 2rem;">bringing texture to life in Singapore.</p>
             <div style="opacity: 0.5; font-size: 0.9rem;">
-                &copy; 2026 Surface Art. All rights reserved.
+                &copy; 2026 Surface Projects. All rights reserved.
             </div>
         </div>
     </footer>
