--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surface Projects | Premium Lime Paint & Plaster Singapore</title>
+    <title>Surface Project | Premium Lime Paint & Plaster Singapore</title>
     <meta name="description"
         content="Singapore's premier lime paint, lime plaster, microcement, and special effect painting services. Transform your walls with artisanal textures.">
 
@@ -27,7 +27,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container nav-wrapper">
-            <a href="#" class="brand-logo">Surface Projects.</a>
+            <a href="#" class="brand-logo">Surface Project</a>
 
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -153,10 +153,10 @@
     <!-- Footer -->
     <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
         <div class="container text-center">
-            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Projects.</h3>
+            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Project</h3>
             <p style="opacity: 0.7; margin-bottom: 2rem;">bringing texture to life in Singapore.</p>
             <div style="opacity: 0.5; font-size: 0.9rem;">
-                &copy; 2026 Surface Projects. All rights reserved.
+                &copy; 2026 Surface Project. All rights reserved.
             </div>
         </div>
     </footer>
