--- a/lime-paint.html
+++ b/lime-paint.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lime Paint | Surface Projects Singapore</title>
+    <title>Lime Paint | Surface Project Singapore</title>
     <meta name="description"
         content="Breathable mineral lime paint with soft matte texture. Available in 4 stroke styles: Soft Cloud, Linear Wash, Cross-Brushed, and Minimal Smooth.">
 
@@ -27,7 +27,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container nav-wrapper">
-            <a href="index.html" class="brand-logo">Surface Projects.</a>
+            <a href="index.html" class="brand-logo">Surface Project</a>
 
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -169,10 +169,10 @@
     <!-- Footer -->
     <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
         <div class="container text-center">
-            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Projects.</h3>
+            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Project</h3>
             <p style="opacity: 0.7; margin-bottom: 2rem;">bringing texture to life in Singapore.</p>
             <div style="opacity: 0.5; font-size: 0.9rem;">
-                &copy; 2026 Surface Projects. All rights reserved.
+                &copy; 2026 Surface Project. All rights reserved.
             </div>
         </div>
     </footer>
