Center category subtitles in FAQ page

--- a/faq.html
+++ b/faq.html
@@ -188,7 +188,7 @@
             <h2>Humidity, Air-Conditioning & Sealers</h2>
 
             <h3
-                style="margin-top: var(--spacing-lg); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem;">
+                style="margin-top: var(--spacing-lg); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem; text-align: center;">
                 Humidity</h3>
             <div class="faq-container">
                 <div class="faq-item">
@@ -212,7 +212,7 @@
             </div>
 
             <h3
-                style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem;">
+                style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem; text-align: center;">
                 Air-Conditioning</h3>
             <div class="faq-container">
                 <div class="faq-item">
@@ -235,7 +235,7 @@
             </div>
 
             <h3
-                style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem;">
+                style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-md); color: var(--color-text-primary); font-size: 1.4rem; text-align: center;">
                 Sealers</h3>
             <div class="faq-container">
                 <div class="faq-item">
