Update expertise section with custom HDB/landed property renders

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="lime-paint.html" class="service-card-link">
                     <div class="service-card">
                         <div class="service-card-img">
-                            <img src="assets/service-limewash.png" alt="Lime Wash Application">
+                            <img src="images/lime-paint-hero.png" alt="Lime Paint HDB Bedroom">
                         </div>
                         <h3>Lime Paint</h3>
                         <p>A mineral-based paint that creates a soft, suede-like texture with subtle cloudiness and
@@ -89,7 +89,7 @@
                 <a href="microcement.html" class="service-card-link">
                     <div class="service-card">
                         <div class="service-card-img">
-                            <img src="assets/service-microcement.png" alt="Microcement Flooring">
+                            <img src="images/microcement-hero.png" alt="Microcement Landed Living Room">
                         </div>
                         <h3>Microcement</h3>
                         <p>Seamless, durable, and waterproof coating perfect for floors, walls, and bathrooms.
@@ -103,8 +103,7 @@
                 <a href="lime-plaster.html" class="service-card-link">
                     <div class="service-card">
                         <div class="service-card-img">
-                            <img src="assets/hero-bg.png" style="filter: brightness(0.9) hue-rotate(10deg);"
-                                alt="Lime Plaster">
+                            <img src="images/lime-plaster-hero.png" alt="Lime Plaster Texture">
                         </div>
                         <h3>Lime Plaster</h3>
                         <p>Hand-applied mineral plaster for feature walls with depth and texture. Tactile,
