Add stroke style visual examples to lime paint page

--- a/lime-paint.html
+++ b/lime-paint.html
@@ -95,21 +95,29 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/stroke-soft-cloud.png" alt="Soft Cloud Stroke Texture"
+                        style="width: 100%; height: 200px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Soft Cloud</h3>
                     <p>Short, overlapping strokes creating gentle, cloud-like variation.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/stroke-linear-wash.png" alt="Linear Wash Stroke Texture"
+                        style="width: 100%; height: 200px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Linear Wash</h3>
                     <p>Directional strokes that introduce subtle movement across the surface.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/stroke-cross-brushed.png" alt="Cross-Brushed Stroke Texture"
+                        style="width: 100%; height: 200px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Cross-Brushed</h3>
                     <p>Layered criss-cross application with visible texture and depth.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/stroke-minimal-smooth.png" alt="Minimal Smooth Stroke Texture"
+                        style="width: 100%; height: 200px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Minimal Smooth</h3>
                     <p>Tighter application for the least movement possible while retaining character.</p>
                 </div>
