Add pattern/finish visual examples for lime plaster and microcement pages

--- a/lime-plaster.html
+++ b/lime-plaster.html
@@ -91,16 +91,22 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/plaster-smooth-trowel.png" alt="Smooth Trowel Pattern Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Smooth Trowel</h3>
                     <p>A refined finish with subtle movement and soft transitions.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/plaster-natural-movement.png" alt="Natural Movement Pattern Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Natural Movement</h3>
                     <p>Organic trowel marks that emphasise the handcrafted nature of the surface.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/plaster-stone-texture.png" alt="Stone Texture Pattern"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Stone Texture</h3>
                     <p>More pronounced texture inspired by traditional stone and masonry.</p>
                 </div>
