--- a/microcement.html
+++ b/microcement.html
@@ -87,11 +87,15 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/microcement-fine.png" alt="Fine Cement Finish Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Fine Cement</h3>
                     <p>Light texture with a smooth, modern appearance.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/microcement-industrial.png" alt="Industrial Finish Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Industrial</h3>
                     <p>More pronounced movement with a raw, architectural feel.</p>
                 </div>
