Add visual examples for lime paint types section

--- a/lime-paint.html
+++ b/lime-paint.html
@@ -68,18 +68,24 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/type-pure-lime.png" alt="Pure Lime Paint Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Pure Lime Paint</h3>
                     <p>Traditional lime-based paint with high breathability and a powdery matte finish. Offers the most
                         organic variation and movement.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/type-casein-lime.png" alt="Casein-Modified Lime Paint Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Casein-Modified Lime Paint</h3>
                     <p>Lime paint enhanced with natural binders for improved adhesion and durability. Provides slightly
                         more control while retaining a mineral appearance.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/type-silicate-lime.png" alt="Mineral Silicate-Lime Blend Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Mineral Silicate-Lime Blend</h3>
                     <p>A hybrid mineral system offering greater durability and washability while maintaining the visual
                         softness of lime finishes. Suitable for higher-traffic areas.</p>
