Add visual examples for microcement systems and lime plaster types

--- a/lime-plaster.html
+++ b/lime-plaster.html
@@ -67,11 +67,15 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/type-fine-plaster.png" alt="Fine Lime Plaster Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Fine Lime Plaster</h3>
                     <p>A smooth mineral plaster with subtle movement and refined transitions.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/type-medium-plaster.png" alt="Medium Aggregate Lime Plaster Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Medium Aggregate Lime Plaster</h3>
                     <p>Incorporates fine aggregates to introduce visible depth and texture.</p>
                 </div>
