--- a/microcement.html
+++ b/microcement.html
@@ -66,12 +66,16 @@
 
             <div class="option-grid-large">
                 <div class="option-card-large">
+                    <img src="images/system-standard-microcement.png" alt="Standard Microcement Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Standard Microcement</h3>
                     <p>A cement-based system suitable for walls and dry interior areas, offering controlled texture and
                         a clean finish.</p>
                 </div>
 
                 <div class="option-card-large">
+                    <img src="images/system-reinforced-microcement.png" alt="Reinforced Microcement Texture"
+                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
                     <h3>Reinforced Microcement</h3>
                     <p>A multi-layer system with additional reinforcement for wet areas and floors. Requires substrate
                         and moisture assessment.</p>
