Add About Us page and update navigation across all pages

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lime Plaster | Surface Project Singapore</title>
+    <title>About Us | Surface Project Singapore</title>
     <meta name="description"
-        content="Hand-applied mineral plaster for feature walls. Available in 3 patterns: Smooth Trowel, Natural Movement, and Stone Texture.">
+        content="Learn about Surface Project - our story, approach to mineral finishes, and warranty coverage for lime paint, microcement, and lime plaster applications.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,114 +47,110 @@
         </div>
     </header>
 
-    <!-- Detail Page Hero -->
+    <!-- Page Hero -->
     <section class="detail-hero">
         <div class="container">
-            <a href="index.html#services" class="back-link">&larr; Back to Services</a>
-            <h1>Lime Plaster</h1>
+            <h1>About Us</h1>
             <p class="hero-intro">
-                Hand-applied mineral plaster designed to create depth, texture, and tactility.
-                Typically used for feature walls and architectural elements.
+                Bringing texture to life in Singapore through carefully applied mineral finishes.
             </p>
         </div>
     </section>
 
-    <!-- Plaster Types Section -->
+    <!-- Our Story Section -->
+    <section class="detail-content-section section-padding">
+        <div class="container">
+            <h2>Our Story</h2>
+            <p class="section-intro">Surface Project was founded on the belief that walls should do more than divide
+                space—they should add character, texture, and depth to interiors.</p>
+
+            <div style="max-width: 800px; margin: 0 auto;">
+                <p style="margin-bottom: var(--spacing-md); color: var(--color-text-secondary); line-height: 1.8;">
+                    We specialize in mineral-based finishes that respond to light, age with integrity, and provide an
+                    alternative to the uniformity of conventional paint. Each project is approached as a collaboration
+                    between material, craftsperson, and space.
+                </p>
+                <p style="color: var(--color-text-secondary); line-height: 1.8;">
+                    Based in Singapore, we work primarily with residential clients seeking finishes that carry visual
+                    weight and tactile presence—surfaces that feel intentional rather than incidental.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Our Approach Section -->
     <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
         <div class="container">
-            <h2>Lime Plaster Types</h2>
-            <p class="section-intro">Each plaster type is selected based on wall condition and desired texture.</p>
+            <h2>Our Approach</h2>
+            <p class="section-intro">We prioritize transparency, material integrity, and realistic expectations.</p>
 
             <div class="option-grid-large">
                 <div class="option-card-large">
-                    <img src="images/type-fine-plaster.png" alt="Fine Lime Plaster Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Fine Lime Plaster</h3>
-                    <p>A smooth mineral plaster with subtle movement and refined transitions.</p>
+                    <h3>Material First</h3>
+                    <p>We work exclusively with mineral-based systems—lime paint, lime plaster, and microcement. No
+                        synthetic substitutes, no shortcuts.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <img src="images/type-medium-plaster.png" alt="Medium Aggregate Lime Plaster Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Medium Aggregate Lime Plaster</h3>
-                    <p>Incorporates fine aggregates to introduce visible depth and texture.</p>
+                    <h3>Surface Evaluation</h3>
+                    <p>Every wall is assessed before quoting. We refuse projects where substrate conditions would
+                        compromise the finish or lead to unrealistic client expectations.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <h3>Textured Mineral Plaster</h3>
-                    <p>A coarser blend designed for pronounced texture and character.</p>
+                    <h3>Sample Boards</h3>
+                    <p>For plaster and textured finishes, we require approved sample boards. Mineral finishes vary by
+                        hand—samples ensure alignment before application.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>No DIY Guidance</h3>
+                    <p>These materials require skill and experience. We do not provide coaching, material-only sales,
+                        or post-application fixes for self-applied work.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Patterns Section -->
+    <!-- Our Warranty Section -->
     <section class="detail-content-section section-padding">
         <div class="container">
-            <h2>Available Patterns</h2>
+            <h2>Our Warranty</h2>
 
-            <div class="option-grid-large">
-                <div class="option-card-large">
-                    <img src="images/plaster-smooth-trowel.png" alt="Smooth Trowel Pattern Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Smooth Trowel</h3>
-                    <p>A refined finish with subtle movement and soft transitions.</p>
+            <div style="max-width: 900px; margin: 0 auto;">
+                <div class="suitability-grid">
+                    <div class="suitability-column suitable">
+                        <h3>Covered</h3>
+                        <ul>
+                            <li>Application defects (peeling, delamination)</li>
+                            <li>Material failure under normal conditions</li>
+                            <li>Adhesion issues from substrate prep</li>
+                            <li>Coverage period: 12 months from completion</li>
+                        </ul>
+                    </div>
+
+                    <div class="suitability-column not-suitable">
+                        <h3>Not Covered</h3>
+                        <ul>
+                            <li>Natural patina and tonal shifts</li>
+                            <li>Wear from scrubbing or abrasion</li>
+                            <li>Water damage (leaks, flooding)</li>
+                            <li>Structural movement or cracking</li>
+                        </ul>
+                    </div>
                 </div>
 
-                <div class="option-card-large">
-                    <img src="images/plaster-natural-movement.png" alt="Natural Movement Pattern Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Natural Movement</h3>
-                    <p>Organic trowel marks that emphasise the handcrafted nature of the surface.</p>
-                </div>
-
-                <div class="option-card-large">
-                    <img src="images/plaster-stone-texture.png" alt="Stone Texture Pattern"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Stone Texture</h3>
-                    <p>More pronounced texture inspired by traditional stone and masonry.</p>
+                <div class="detail-note-large" style="margin-top: var(--spacing-xl);">
+                    <p><strong>All finishes are hand-applied. Variation is inherent and intentional. Warranty does not
+                            cover aesthetic preference changes after completion.</strong></p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Suitability Section -->
+    <!-- CTA Section -->
     <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
         <div class="container">
-            <h2>Suitability</h2>
-
-            <div class="suitability-grid">
-                <div class="suitability-column suitable">
-                    <h3>Suitable for</h3>
-                    <ul>
-                        <li>Feature walls</li>
-                        <li>Accent areas</li>
-                        <li>Living spaces</li>
-                        <li>Architectural focal points</li>
-                    </ul>
-                </div>
-
-                <div class="suitability-column not-suitable">
-                    <h3>Not recommended for</h3>
-                    <ul>
-                        <li>Entire rooms (feature walls only)</li>
-                        <li>Wet areas</li>
-                        <li>High-impact zones</li>
-                        <li>Clients requiring perfection</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Disclaimer Section -->
-    <section class="detail-content-section section-padding">
-        <div class="container">
-
-            <div class="detail-note-large">
-                <p><strong>Lime plaster finishes are evaluated per wall. Sample boards are required.</strong></p>
-            </div>
-
             <div class="detail-cta-large">
                 <a href="index.html#contact" class="btn">Request Surface Evaluation</a>
             </div>
