--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </button>
 
             <nav class="nav-links">
-                <a href="#home">Home</a>
+                <a href="about.html">About Us</a>
                 <a href="#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="faq.html">FAQ</a>
