--- a/microcement.html
+++ b/microcement.html
@@ -36,7 +36,7 @@
             </button>
 
             <nav class="nav-links">
-                <a href="index.html#home">Home</a>
+                <a href="about.html">About Us</a>
                 <a href="index.html#services">Services</a>
                 <a href="#gallery">Gallery</a>
                 <a href="faq.html">FAQ</a>
