Update About Us to mention both residential and commercial clients

--- a/about.html
+++ b/about.html
@@ -71,7 +71,8 @@
                     between material, craftsperson, and space.
                 </p>
                 <p style="color: var(--color-text-secondary); line-height: 1.8;">
-                    Based in Singapore, we work primarily with residential clients seeking finishes that carry visual
+                    Based in Singapore, we work with both residential and commercial clients seeking finishes that carry
+                    visual
                     weight and tactile presence—surfaces that feel intentional rather than incidental.
                 </p>
             </div>
