Add Our Process timeline section to About Us page

--- a/about.html
+++ b/about.html
@@ -113,6 +113,52 @@
         </div>
     </section>
 
+    <!-- Our Process Section -->
+    <section class="detail-content-section section-padding">
+        <div class="container">
+            <h2>Our Process</h2>
+            <p class="section-intro">A clear workflow from initial contact to project completion.</p>
+
+            <div class="option-grid-large">
+                <div class="option-card-large">
+                    <h3>1. Initial Contact</h3>
+                    <p>Reach out via WhatsApp or contact form. Share photos of the space and describe your vision. We'll
+                        assess suitability before scheduling.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>2. Site Evaluation</h3>
+                    <p>We visit the site to assess substrate conditions, measure surfaces, and discuss material options.
+                        This is not a sales call—unsuitable projects are declined.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>3. Sample Approval</h3>
+                    <p>For plaster and textured finishes, we prepare sample boards for your approval. Once approved, the
+                        sample becomes the reference standard.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>4. Quotation</h3>
+                    <p>After evaluation, we provide a detailed quote covering materials, labor, substrate prep, and
+                        timeline. No surprises, no hidden costs.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>5. Application</h3>
+                    <p>Work is scheduled with clear timelines. We manage substrate preparation, material application,
+                        and site cleanup. Expect 2-4 days for most residential rooms.</p>
+                </div>
+
+                <div class="option-card-large">
+                    <h3>6. Final Walkthrough</h3>
+                    <p>We conduct a final walkthrough to review the finish, answer questions, and provide care
+                        instructions. Warranty coverage begins upon completion.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Our Warranty Section -->
     <section class="detail-content-section section-padding">
         <div class="container">
