--- a/about.html
+++ b/about.html
@@ -47,30 +47,46 @@
         </div>
     </header>
 
-    <!-- Page Hero -->
-    <section class="detail-hero">
-        <div class="container">
-            <h1>About Us</h1>
-            <p class="hero-intro">
+    <!-- Page Hero with Background -->
+    <section class="detail-hero"
+        style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #2c2c2c 0%, #3d3d3d 100%); overflow: hidden;">
+        <!-- Background Pattern Overlay at 60% -->
+        <div
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.03) 35px, rgba(255,255,255,.03) 70px); z-index: 0;">
+        </div>
+
+        <div class="container" style="position: relative; z-index: 1;">
+            <h1
+                style="color: #e6e2d6; font-size: clamp(3rem, 6vw, 5rem); margin-bottom: var(--spacing-md); text-align: center;">
+                About Us</h1>
+            <p class="hero-intro"
+                style="color: rgba(230, 226, 214, 0.85); max-width: 700px; margin: 0 auto; text-align: center; font-size: 1.3rem;">
                 Bringing texture to life in Singapore through carefully applied mineral finishes.
             </p>
         </div>
     </section>
 
-    <!-- Our Story Section -->
-    <section class="detail-content-section section-padding">
+    <!--Our Story Section -->
+    <section class="detail-content-section section-padding" style="background: #ffffff; padding: var(--spacing-2xl) 0;">
         <div class="container">
-            <h2>Our Story</h2>
-            <p class="section-intro">Surface Project was founded on the belief that walls should do more than divide
-                space—they should add character, texture, and depth to interiors.</p>
+            <h2
+                style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
+                Our Story</h2>
+            <p class="section-intro"
+                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 750px; margin: 0 auto var(--spacing-xl); line-height: 1.8; font-style: italic;">
+                Surface Project was founded on the belief that walls should do more than divide space—they should add
+                character, texture, and depth to interiors.
+            </p>
 
-            <div style="max-width: 800px; margin: 0 auto;">
-                <p style="margin-bottom: var(--spacing-md); color: var(--color-text-secondary); line-height: 1.8;">
+            <div
+                style="max-width: 850px; margin: 0 auto; background: var(--color-bg-secondary); padding: var(--spacing-xl); border-radius: var(--radius-md); box-shadow: 0 10px 40px rgba(0,0,0,0.08);">
+                <p
+                    style="margin-bottom: var(--spacing-lg); color: var(--color-text-primary); line-height: 2; font-size: 1.05rem;">
                     We specialize in mineral-based finishes that respond to light, age with integrity, and provide an
                     alternative to the uniformity of conventional paint. Each project is approached as a collaboration
                     between material, craftsperson, and space.
                 </p>
-                <p style="color: var(--color-text-secondary); line-height: 1.8;">
+                <p style="color: var(--color-text-primary); line-height: 2; font-size: 1.05rem;">
                     Based in Singapore, we work with both residential and commercial clients seeking finishes that carry
                     visual
                     weight and tactile presence—surfaces that feel intentional rather than incidental.
@@ -80,10 +96,20 @@
     </section>
 
     <!-- Our Approach Section -->
-    <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
-        <div class="container">
-            <h2>Our Approach</h2>
-            <p class="section-intro">We prioritize transparency, material integrity, and realistic expectations.</p>
+    <section class="detail-content-section section-padding"
+        style="position: relative; background: linear-gradient(to bottom, #e6e2d6 0%, #d8d4c8 100%); padding: var(--spacing-2xl) 0; overflow: hidden;">
+        <!-- Subtle Pattern Overlay at 60% -->
+        <div
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; background-image: radial-gradient(circle at 20% 50%, transparent 20%, rgba(44,44,44,0.02) 20.5%, transparent 21%), radial-gradient(circle at 80% 80%, transparent 20%, rgba(44,44,44,0.02) 20.5%, transparent 21%); background-size: 80px 80px; z-index: 0;">
+        </div>
+
+        <div class="container" style="position: relative; z-index: 1;">
+            <h2
+                style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
+                Our Approach</h2>
+            <p class="section-intro"
+                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto var(--spacing-xl); line-height: 1.8;">
+                We prioritize transparency, material integrity, and realistic expectations.</p>
 
             <div class="option-grid-large">
                 <div class="option-card-large">
@@ -114,10 +140,14 @@
     </section>
 
     <!-- Our Process Section -->
-    <section class="detail-content-section section-padding">
+    <section class="detail-content-section section-padding" style="background: #ffffff; padding: var(--spacing-2xl) 0;">
         <div class="container">
-            <h2>Our Process</h2>
-            <p class="section-intro">A clear workflow from initial contact to project completion.</p>
+            <h2
+                style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
+                Our Process</h2>
+            <p class="section-intro"
+                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 700px; margin: 0 auto var(--spacing-xl); line-height: 1.8;">
+                A clear workflow from initial contact to project completion.</p>
 
             <div class="option-grid-large">
                 <div class="option-card-large">
