--- a/about.html
+++ b/about.html
@@ -49,11 +49,7 @@
 
     <!-- Page Hero with Background -->
     <section class="detail-hero"
-        style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #2c2c2c 0%, #3d3d3d 100%); overflow: hidden;">
-        <!-- Background Pattern Overlay at 60% -->
-        <div
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.03) 35px, rgba(255,255,255,.03) 70px); z-index: 0;">
-        </div>
+        style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #2c2c2c 0%, #3d3d3d 100%);">
 
         <div class="container" style="position: relative; z-index: 1;">
             <h1
@@ -97,13 +93,9 @@
 
     <!-- Our Approach Section -->
     <section class="detail-content-section section-padding"
-        style="position: relative; background: linear-gradient(to bottom, #e6e2d6 0%, #d8d4c8 100%); padding: var(--spacing-2xl) 0; overflow: hidden;">
-        <!-- Subtle Pattern Overlay at 60% -->
-        <div
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.6; background-image: radial-gradient(circle at 20% 50%, transparent 20%, rgba(44,44,44,0.02) 20.5%, transparent 21%), radial-gradient(circle at 80% 80%, transparent 20%, rgba(44,44,44,0.02) 20.5%, transparent 21%); background-size: 80px 80px; z-index: 0;">
-        </div>
+        style="background: linear-gradient(to bottom, #e6e2d6 0%, #d8d4c8 100%); padding: var(--spacing-2xl) 0;">
 
-        <div class="container" style="position: relative; z-index: 1;">
+        <div class="container">
             <h2
                 style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
                 Our Approach</h2>
