--- a/about.html
+++ b/about.html
@@ -63,8 +63,19 @@
     </section>
 
     <!--Our Story Section -->
-    <section class="detail-content-section section-padding" style="background: #ffffff; padding: var(--spacing-2xl) 0;">
-        <div class="container">
+    <section class="detail-content-section section-padding"
+        style="position: relative; background: #ffffff; padding: var(--spacing-2xl) 0; overflow: hidden;">
+        <!-- Background Image at 70% opacity -->
+        <div
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('images/our-story-bg.jpg'); background-size: cover; background-position: center; opacity: 0.7; z-index: 0;">
+        </div>
+
+        <!-- White overlay for better text readability -->
+        <div
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, rgba(255,255,255,0.85) 0%, rgba(255,255,255,0.75) 100%); z-index: 1;">
+        </div>
+
+        <div class="container" style="position: relative; z-index: 2;">
             <h2
                 style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
                 Our Story</h2>
@@ -75,7 +86,7 @@
             </p>
 
             <div
-                style="max-width: 850px; margin: 0 auto; background: var(--color-bg-secondary); padding: var(--spacing-xl); border-radius: var(--radius-md); box-shadow: 0 10px 40px rgba(0,0,0,0.08);">
+                style="max-width: 850px; margin: 0 auto; background: rgba(230, 226, 214, 0.95); padding: var(--spacing-xl); border-radius: var(--radius-md); box-shadow: 0 10px 40px rgba(0,0,0,0.12); backdrop-filter: blur(10px);">
                 <p
                     style="margin-bottom: var(--spacing-lg); color: var(--color-text-primary); line-height: 2; font-size: 1.05rem;">
                     We specialize in mineral-based finishes that respond to light, age with integrity, and provide an
