Simplify Our Story - remove overlays and card, keep clean text over background

--- a/about.html
+++ b/about.html
@@ -70,30 +70,25 @@
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url('images/our-story-bg.jpg'); background-size: cover; background-position: center; opacity: 0.7; z-index: 0;">
         </div>
 
-        <!-- White overlay for better text readability -->
-        <div
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, rgba(255,255,255,0.85) 0%, rgba(255,255,255,0.75) 100%); z-index: 1;">
-        </div>
-
-        <div class="container" style="position: relative; z-index: 2;">
+        <div class="container" style="position: relative; z-index: 1;">
             <h2
-                style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500;">
+                style="text-align: center; font-size: clamp(2.5rem, 5vw, 3.5rem); margin-bottom: var(--spacing-sm); color: var(--color-text-primary); font-weight: 500; text-shadow: 0 2px 8px rgba(255,255,255,0.8);">
                 Our Story</h2>
             <p class="section-intro"
-                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 750px; margin: 0 auto var(--spacing-xl); line-height: 1.8; font-style: italic;">
+                style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 750px; margin: 0 auto var(--spacing-xl); line-height: 1.8; font-style: italic; text-shadow: 0 1px 4px rgba(255,255,255,0.9);">
                 Surface Project was founded on the belief that walls should do more than divide space—they should add
                 character, texture, and depth to interiors.
             </p>
 
-            <div
-                style="max-width: 850px; margin: 0 auto; background: rgba(230, 226, 214, 0.95); padding: var(--spacing-xl); border-radius: var(--radius-md); box-shadow: 0 10px 40px rgba(0,0,0,0.12); backdrop-filter: blur(10px);">
+            <div style="max-width: 850px; margin: 0 auto;">
                 <p
-                    style="margin-bottom: var(--spacing-lg); color: var(--color-text-primary); line-height: 2; font-size: 1.05rem;">
+                    style="margin-bottom: var(--spacing-lg); color: var(--color-text-primary); line-height: 2; font-size: 1.05rem; text-align: center; text-shadow: 0 1px 4px rgba(255,255,255,0.9);">
                     We specialize in mineral-based finishes that respond to light, age with integrity, and provide an
                     alternative to the uniformity of conventional paint. Each project is approached as a collaboration
                     between material, craftsperson, and space.
                 </p>
-                <p style="color: var(--color-text-primary); line-height: 2; font-size: 1.05rem;">
+                <p
+                    style="color: var(--color-text-primary); line-height: 2; font-size: 1.05rem; text-align: center; text-shadow: 0 1px 4px rgba(255,255,255,0.9);">
                     Based in Singapore, we work with both residential and commercial clients seeking finishes that carry
                     visual
                     weight and tactile presence—surfaces that feel intentional rather than incidental.
