Change hero section back to beige theme colors

--- a/about.html
+++ b/about.html
@@ -49,14 +49,14 @@
 
     <!-- Page Hero with Background -->
     <section class="detail-hero"
-        style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #2c2c2c 0%, #3d3d3d 100%);">
+        style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #e6e2d6 0%, #d8d4c8 100%);">
 
         <div class="container" style="position: relative; z-index: 1;">
             <h1
-                style="color: #e6e2d6; font-size: clamp(3rem, 6vw, 5rem); margin-bottom: var(--spacing-md); text-align: center;">
+                style="color: var(--color-text-primary); font-size: clamp(3rem, 6vw, 5rem); margin-bottom: var(--spacing-md); text-align: center;">
                 About Us</h1>
             <p class="hero-intro"
-                style="color: rgba(230, 226, 214, 0.85); max-width: 700px; margin: 0 auto; text-align: center; font-size: 1.3rem;">
+                style="color: var(--color-text-secondary); max-width: 700px; margin: 0 auto; text-align: center; font-size: 1.3rem;">
                 Bringing texture to life in Singapore through carefully applied mineral finishes.
             </p>
         </div>
